--- a/customer/src/App.scss
+++ b/customer/src/App.scss
@@ -119,6 +119,7 @@ input, textarea, select{
   &-black{background-color: $clr-black;}
   &-ghost-white{background-color: $clr-ghost-white;}
   &-dark{background-color: $clr-dark;}
+  &-red{background-color: $clr-red;}
 }
 
 /* font weights */
