--- a/customer/src/common/Navbar/Navbar.scss
+++ b/customer/src/common/Navbar/Navbar.scss
@@ -28,7 +28,7 @@
         .navbar-search-btn{
             width: 60px;
             height: 44px;
-            background-color: $clr-gold;
+            background-color: $clr-red;
             color: $clr-white;
             transition: $transition;
 
@@ -53,7 +53,7 @@
                     display: inline-flex;
                     justify-content: center;
                     align-items: center;
-                    background-color: $clr-gold;
+                    background-color: $clr-red;
                     width: 20px;
                     height: 20px;
                     border-radius: 50%;
